# VortexVise

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VortexVise.sln  credits.txt
Assets/: CameraScript.cs  CrosshairScript.cs  HookScript.cs  MachineGunScript.cs  MeldsScript.cs  PlayerScript.cs  Utils.cs
ProjectSettings/: Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
Resources/: MasterServers.json  Servers.ini  Servers.json
VortexVise/: .gitignore  CMakeLists.txt  ClientAction.cpp  ClientAction.h  Combatant.cpp  Combatant.h  Enums.cs  GameCore.cs  GameMatch.cs  GameOptions.cs  GameServer.cpp  GameServer.h  GameplayScene.cs  Hook.cpp  Hook.h  Input.h  Makefile  Map.cpp  Map.h  Player.cpp  Player.h  Program.cs  State.h  UserInterface.cs  Usings.cs  Utils.cpp  Utils.h  VortexVise.cpp  VortexVise.csproj  VortexVise.h  VortexVise.sln  VortexVise.vcxproj  VortexVise.vcxproj.filters
VortexVise/Enums/: Enums.cs  Enums.h
VortexVise/Game/: GameCore.h
VortexVise/GameContext/: GameAssets.h  GameCore.h  GameRenderer.h
VortexVise/GameGlobals/: GameAssets.cs  GameAudio.cs  GameCore.cs  GameMatch.cs  GameOptions.cs  GameSettings.cs  GameSounds.cs  GameUserInterface.cs  MatchSettings.cs
VortexVise/GameLogic/: CameraLogic.cs  CameraLogic.h  GameClient.cs  GameLogic.cs  HookLogic.cs  MapLogic.cs  MapLogic.h  MatchLogic.h  PlayerHookLogic.cs  PlayerLogic.cs  PlayerLogic.h  WeaponLogic.cs  WeaponLogic.h
VortexVise/GameObjects/: Hook.cs  Map.cs  Player.cs
VortexVise/GameScenes/: MenuScene.h
VortexVise/GameStates/: GameState.h  HookState.h  InputState.h  WeaponDropState.h  WeaponState.h
VortexVise/Logic/: GameClient.cs  GameLogic.cs  HookLogic.cs  MapLogic.cs  PlayerLogic.cs
VortexVise/Models/: Animation.h  GameLobby.h  GameMatch.cs  Input.cs  Map.cs  Map.h  MasterServer.h  PlayerCamera.cs  PlayerProfile.cs  PlayerProfile.h  Skin.cs  Weapon.cs
VortexVise/Networking/: ClientAction.cs  GameClient.h  GameState.cs  HookState.cs  PlayerState.cs  State.cs
VortexVise/Properties/: launchSettings.json
VortexVise/Resources/Audio/Sounds/Raw/: hook_fire.aup3  hook_hit.aup3
VortexVise/Resources/Maps/: CogsworthCitadel.ini  ColossalConstruction.ini  CookhouseShootout.ini  CyberneticArena.ini  RusticRanch.ini  Sketchbook.ini  SkyArchipelago.ini  SkyArchipelago.txt  SunkenSerenity.ini  WitchingSkyline.ini  _example.ini
VortexVise/Resources/Sprites/Skins/aseprite/: fatso.aseprite
VortexVise/Resources/Weapons/: Weapons.ini
VortexVise/Scenes/: GameSceneManager.cs  GameplayScene.cs  MenuScene.cs
VortexVise/States/: AnimationState.cs  DamageHitBoxState.cs  GameState.cs  HookState.cs  InputState.cs  PlayerState.cs  WeaponDrop.cs  WeaponDropState.cs  WeaponState.cs
VortexVise/Utilities/: SerializableRectangle.cs  SerializableVector2.cs  Utils.cs
VortexViseEditor/: Program.cs  VortexViseEditor.cpp  VortexViseEditor.csproj  VortexViseEditor.vcxproj  VortexViseEditor.vcxproj.filters
VortexViseGo/: VortexVise.go  go.mod
VortexViseServer/: .gitignore  GameHub.cs  GameServer.cs  Program.cs  VortexViseServer.cpp  VortexViseServer.csproj  VortexViseServer.sln  (+2 more)
(+397 files in other folders)
